compiler/testData/cli/jvm/extraArgCommonChecks/extraBooleanArgumentEqualsFalse.out
compiler/testData/cli/jvm/extraArgCommonChecks/extraBooleanArgumentEqualsFalse.kt:1:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package
package kotlin
^^^^^^^^^^^^^^
COMPILATION_ERROR
